# victus-agent

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: sync-docs.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
config/: runtime.yml
config/router/: intent_prototypes.v1.yml  router_thresholds.v1.yml
dev/langgraph-viewer/: README.md  langgraph.json  main.py  pyproject.toml
docs/: 000-SYSTEM-CONTEXT.md  100-ARCHITECTURE.md  200-OPERATIONS.md  300-CONTRACTS.md
docs/adr/: 20260614-clean-architecture-source-layout.md  20260614-session-context-management.md  20260617-agent-user-identities.md
docs/contracts/: domain-events-v1.md  langgraph-state-v1.md  postgres-schema-v1.md  projections-v1.md  session-context-v1.md  tool-result-envelope-v1.md  user-event-envelope.md
docs/implementation/: 000-v1-mvp-scope.md  010-build-order.md  020-acceptance-tests.md
docs/nodes/: README.md  context-bootstrap-node.md  evidence-answer-node.md  safety-precheck-node.md  summary-after-response-node.md
docs/runbooks/: docs-sync.md
docs/workflows/: v1-runtime-flow.md
migrations/: env.py
migrations/versions/: 20260612_0001_initial_schema.py  20260614_0002_session_context.py
ops/: __init__.py
ops/scripts/: contracts.py
safety/: __init__.py
safety/data_sources/: aegis_2_0.yaml
safety/datasets/: __init__.py  langgraph_studio_safety_cases.json  load_aegis.py  normalize_aegis.py
safety/engine/: __init__.py  decision_resolver.py  evaluator.py  (+3 more)
tests/: test_victus_cli.py
(+123 files in other folders)
