[project]
name = "victus-agent"
version = "0.1.0"
description = "Victus agent runtime and embedding-assisted intent router."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1,<2",
  "langgraph>=1,<2",
  "langgraph-cli[inmem]>=0.4,<1",
  "litellm>=1,<2",
  "psycopg[binary]>=3,<4",
  "pydantic>=2",
  "PyYAML>=6",
  "SQLAlchemy>=2,<3",
]

[project.scripts]
victus = "victus_cli:main"
contracts = "ops.scripts.contracts:main"

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3",
]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/agent",
  "src/application",
  "src/domain",
  "src/infrastructure",
  "src/victus_cli",
  "ops",
]
